@@ -12,6 +12,7 @@ tasks (marked with * are necessary for next release)
  [ 4 ] profile different methods of hook activation / deactivation
  [ 1 ] improve testsuite (profiler profiling itself)
 	 - test binary should not be part of dist
+ [ 2 ] print function id in flat profile only if call graph is enabled
 
 questions
  [ 5 ] Why does addr2line do some black magic on elf addresses
